# simple-arcade-rs

./: .gitignore  Cargo.toml  README.md
arcade-menu/: Cargo.toml  README.md
arcade-menu/src/: lib.rs  main.rs  menu.rs  plugin.rs  systems.rs  util.rs
arcade-popup/: Cargo.toml
arcade-popup/src/: lib.rs  main.rs  plugin.rs  systems.rs  util.rs
arcade-result/: Cargo.toml
arcade-result/src/: components.rs  lib.rs  main.rs  plugin.rs  systems.rs  util.rs
arcade-util/: Cargo.toml  README.md
arcade-util/src/: board.rs  coords.rs  directions.rs  lib.rs  plugins.rs  statuses.rs  systems.rs  traits.rs
arcade-util/tests/: tests.rs
minesweeper/: Cargo.toml  README.md
minesweeper-rs/: Cargo.toml  README.md
minesweeper-rs/src/: board.rs  lib.rs  main.rs  minefield.rs  plugin.rs  util.rs
minesweeper/src/: board.rs  lib.rs  main.rs  minefield.rs  plugin.rs  systems.rs  util.rs
pacman/: Cargo.toml  README.md
pacman/src/: board.rs  lib.rs  main.rs  maze.rs  pacman.rs  plugin.rs  util.rs
simple-arcade/: Cargo.toml
simple-arcade/src/: main.rs
snake/: Cargo.toml  README.md
snake-rs/: Cargo.toml  README.md
snake-rs/src/: board.rs  food.rs  game.rs  lib.rs  main.rs  plugin.rs  snake.rs  state.rs  util.rs
snake-rs/tests/: tests.rs
snake/src/: board.rs  main.rs  plugin.rs  snake.rs  util.rs
